# gorrosion

./: .travis.yml  Cargo.toml  README.md  rustfmt.toml
gorrosion/: README.md
gorrosion/src/: lib.rs
gorrosion/src/core/: board.rs  game.rs
gorrosion/src/gtp/: mod.rs
gtp/: Cargo.toml
gtp/src/: lib.rs  types.rs
src/: lib.rs
src/core/: board.rs  game.rs  mod.rs  rules.rs
src/core/util/: bool_mat.rs  bool_vec.rs  indexer.rs  mod.rs
src/field/: bool_mat.rs  mod.rs
src/gtp/: mod.rs
