[package]
name = "gorrosion-gtp"
version = "0.1.0"
authors = ["Peter Fürstenau <fuerstenau@mathematik.tu-darmstadt.de>"]
description = "A best-effort strongly typed interface between Rust and GTP, the Go Text Protocoll"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fuerstenau/gorrosion"
keywords = ["Go", "baduk", "weiqi", "GTP", "protocoll"]
categories = ["game-engines"]
documentation = "https://docs.rs/gorrosion-gtp"

[badges]
travis-ci = { repository = "fuerstenau/gorrosion", branch = "master" }
coveralls = { repository = "fuerstenau/gorrosion", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
nom = { version = "^4.0" }
